1.2.0
  * Support injection of extended Record class (thanks Dan Michael O. Heggø!)
  * Support regular expression matching of subfields (thanks Waldemar Bartikowski!)

1.1.5
  * Drop support for PHP 5.3 and 5.4

1.1.4
  * Fix insertField() behaviour, which could truncate records (reported by Andreas Roussos)
  * Docs correction for Data_Field (thanks Daniel Walter)

1.1.3
  * Add a getContents() convenience method, contributed by Carsten Klee

1.1.2
  * Fetch pear_exception from Packagist [danmichaelo]

1.1.1
  * Add MARC-in-JSON serialization fix for subfield 0 json_encode() limitation
    (thanks to Bill Dueber for reporting the bug)

1.1.0
  * Enable namespaces in MARCXML handling (thanks Carsten Klee!)
  * Remove skip check for Structures/Linked_List

1.0.2
* Update MARC_Lint set of rules (thanks Demian Katz!) 

1.0.1
* Fix bug in MARC binary serialization of subfields with value '0'.
  Thanks to Mark Jordan (mjordan@sfu.ca) for the bug report.

1.0.0
* First stable release!

0.8.0-beta
* Drop Structures_LinkedList dependency in favour of SplDoublyLinkedList.
  This bumps the minimum PHP version up to 5.2.0.

0.7.3-beta
* Merge patch from Karen Coombs (librarywebchic@gmail.com) adding default
  namespace to record elements

0.7.2-beta
* Fix bug #19845 - Record::toXML() returns nothing

0.7.1-beta
* Make Validate_ISPN an optional dependency

0.6.2-beta
* Improve handling of bad leader data, including declared length and overly
  long leaders in MARCXML

0.6.1-beta
* Correct layout per bug #17704

0.6.0-beta
* Add two flavours of JSON output from File_MARC_Record: toJSON() and
  toJSONHash()

0.5.2-beta
* Enable File_MARC_Record to be invoked with a null constructor again, useful
  for building MARC records from scratch
* Add a test to check that the null constructor works to avoid future
  regressions

0.5.1-beta
* Explicitly cast results to strings to avoid returning XML objects when
  File_MARCXML is in effect; problem doesn't show up in the PHP CLI, but does