@@ -19,10 +19,10 @@ This package is based on the PHP MARC package, originally called "php-marc", tha
   <email>dbs@php.net</email>
   <active>yes</active>
  </lead>
- <date>2017-01-23</date>
+ <date>2017-12-04</date>
  <version>
-  <release>1.1.5</release>
-  <api>1.1.5</api>
+  <release>1.2.0</release>
+  <api>1.2.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -30,8 +30,10 @@ This package is based on the PHP MARC package, originally called "php-marc", tha
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</license>
  <notes>
-1.1.5
-  * Drop support for PHP 5.3 and 5.4
+1.2.0
+  * Support injection of extended Record class (thanks Dan Michael O. Heggø!)
+  * Support regular expression matching of subfields (thanks Waldemar Bartikowski!)
+  * Fix deletion of multiple subfields at once (thanks Dan Michael O. Heggø!)
  </notes>
  <contents>
   <dir name="/" baseinstalldir="File">
@@ -88,12 +90,14 @@ This package is based on the PHP MARC package, originally called "php-marc", tha
     <file name="marc_020.phpt" role="test" />
     <file name="marc_021.phpt" role="test" />
     <file name="marc_022.phpt" role="test" />
+    <file name="marc_023.phpt" role="test" />
     <file name="marc_16783.phpt" role="test" />
     <file name="marc_field_001.phpt" role="test" />
     <file name="marc_field_002.phpt" role="test" />
     <file name="marc_field_003.phpt" role="test" />
     <file name="marc_field_004.phpt" role="test" />
     <file name="marc_field_005.phpt" role="test" />
+    <file name="marc_field_21246.phpt" role="test" />
     <file name="marc_lint_001.phpt" role="test" />
     <file name="marc_lint_002.phpt" role="test" />
     <file name="marc_lint_003.phpt" role="test" />
