@@ -1,6 +1,7 @@
 1.2.0
   * Support injection of extended Record class (thanks Dan Michael O. Heggø!)
   * Support regular expression matching of subfields (thanks Waldemar Bartikowski!)
+  * Fix deletion of multiple subfields at once (thanks Dan Michael O. Heggø!)
 
 1.1.5
   * Drop support for PHP 5.3 and 5.4
